--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["--epochs", "3", "--log-interval", "10"],
-            "cwd": "./word_language_model/"
+            "args": ["--epochs", "50", "--log-interval", "10", "--model", "Transformer"]
 
         }
     ]
